force-app/main/default/objects/Case/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quote request</fullName>
            </value>
            <value>
                <fullName>Trial request</fullName>
            </value>
            <value>
                <fullName>Pricing or Invoice query</fullName>
            </value>
            <value>
                <fullName>Account query</fullName>
            </value>
            <value>
                <fullName>Content query</fullName>
            </value>
            <value>
                <fullName>Tech issue</fullName>
            </value>
            <value>
                <fullName>Purchase Orders and Edbuy Order</fullName>
            </value>
            <value>
                <fullName>Remittance advice</fullName>
            </value>
            <value>
                <fullName>Cancel and refund request</fullName>
            </value>
            <value>
                <fullName>Feature Query</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>