force-app/main/default/objects/Case/fields/Collaborator__c.field-meta.xml
<CustomField>
    <fullName>Collaborator__c</fullName>
    <label>Collaborator</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amir</fullName>
            </value>
            <value>
                <fullName>Crespo</fullName>
            </value>
            <value>
                <fullName>Grace</fullName>
            </value>
            <value>
                <fullName>Jessica</fullName>
            </value>
            <value>
                <fullName>Ky</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>