force-app/main/default/objects/Case/fields/Teaching_School__c.field-meta.xml
<CustomField>
    <fullName>Teaching_School__c</fullName>
    <formula>IF(ISBLANK(Account.teaching_school__r.Name), &quot;No School&quot;, Account.teaching_school__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Teaching School</label>
    <type>Text</type>
</CustomField>