force-app/main/default/objects/Case/fields/User_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>User_Is_Active__c</fullName>
    <description>user is Active</description>
    <formula>AccountId != null &amp;&amp; TEXT(Account.User_Status__c) == &apos;Active&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Is Active</label>
    <type>Checkbox</type>
</CustomField>