force-app/main/default/objects/Case/recordTypes/System.recordType-meta.xml
<RecordType>
    <fullName>System</fullName>
    <active>true</active>
    <businessProcess>Case Support Process</businessProcess>
    <label>System</label>
</RecordType>