force-app/main/default/objects/Case/validationRules/TypeAndCategoryMustBeSet.validationRule-meta.xml
<ValidationRule>
    <fullName>TypeAndCategoryMustBeSet</fullName>
    <active>true</active>
    <description>Case Type and Category must be set before closing the case</description>
    <errorConditionFormula>TEXT(Status) == &apos;Closed&apos;  &amp;&amp; ( ISBLANK(TEXT(Type)) || ISBLANK(TEXT(Category__c)))</errorConditionFormula>
    <errorMessage>Please set case Type and Category</errorMessage>
</ValidationRule>