force-app/main/default/objects/Case/listViews/Fed_Grant_2023_Case.listView-meta.xml
<ListView>
    <fullName>Fed_Grant_2023_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Fed Grant 2023</label>
    <queue>Fed_Grant_2023</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>