force-app/main/default/objects/Case/listViews/Product_Email_Case.listView-meta.xml
<ListView>
    <fullName>Product_Email_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Product Email</label>
    <queue>Product_Email</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>