force-app/main/default/objects/Case/listViews/SurveyGizmo_Case.listView-meta.xml
<ListView>
    <fullName>SurveyGizmo_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>SurveyGizmo</label>
    <queue>SurveyGizmo</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>